use ImmutableMap.of for consistency